--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
     font-style: normal;
     background-color: rgb(184, 186, 186, 0.25);
     text-decoration: solid;
+    overflow-y: hidden;
 }
 
 .content {
